--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -194,6 +194,12 @@
                     <p class="text-center">后勤公共维修</p>
                 </a>
             </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=MT")">
+                    <img src="@Url.Content("~/Content/images/mt.png")" class="center-block" />
+                    <p class="text-center">设备保养申请</p>
+                </a>
+            </div>
 
             <div class="col-xs-12 text-danger p-title"><i class="fa fa-th fa-fw"></i> 其它功能</div>
 
